<resources>
    <string name="app_name">Computer Science IA Study Management</string>
    <string name="study_management">Study Management</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="start">Start</string>
    <string name="add">Add</string>
    <string name="reward">Reward</string>
    <string name="time_this_week">Time this week</string>
    <string name="timer">Timer</string>
    <string name="start2">Start</string>
    <string name="settings">Settings</string>
    <string name="hours_for_rewards">Hours for rewards</string>
    <string name="rewards">Rewards</string>
    <string name="save">Save</string>
    <string name="add_a_task">Add a task</string>
    <string name="task">Task</string>
    <string name="due_date">Due Date</string>
    <string name="hours">Hours</string>
    <string name="save2">Save</string>
</resources>